// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compileUpsert > UpdateDate field in SET clause > should compile upsert with UpdateDate field 1`] = `
{
  "params": [
    "order-uuid-1",
    "pending",
    99.99,
    2024-06-01T00:00:00.000Z,
  ],
  "text": "INSERT INTO "shop"."orders" ("id", "status", "total", "updated_at") VALUES ($1, $2, $3, $4) ON CONFLICT ("id") DO UPDATE SET "status" = EXCLUDED."status", "total" = EXCLUDED."total", "updated_at" = NOW() RETURNING *",
}
`;

exports[`compileUpsert > Version field in SET clause > should compile upsert with version field 1`] = `
{
  "params": [
    "order-uuid-1",
    "pending",
    99.99,
    2,
  ],
  "text": "INSERT INTO "shop"."orders" ("id", "status", "total", "version") VALUES ($1, $2, $3, $4) ON CONFLICT ("id") DO UPDATE SET "status" = EXCLUDED."status", "total" = EXCLUDED."total", "version" = "shop"."orders"."version" + 1 RETURNING *",
}
`;

exports[`compileUpsert > all special fields combined > should compile upsert with Version, CreateDate, and UpdateDate fields 1`] = `
{
  "params": [
    "order-uuid-2",
    "shipped",
    3,
    2024-01-01T00:00:00.000Z,
    2024-06-01T00:00:00.000Z,
  ],
  "text": "INSERT INTO "shop"."orders" ("id", "status", "version", "created_at", "updated_at") VALUES ($1, $2, $3, $4, $5) ON CONFLICT ("id") DO UPDATE SET "status" = EXCLUDED."status", "version" = "shop"."orders"."version" + 1, "updated_at" = NOW() RETURNING *",
}
`;

exports[`compileUpsert > basic upsert structure > should compile a basic upsert with single PK 1`] = `
{
  "params": [
    "order-uuid-1",
    "pending",
    99.99,
  ],
  "text": "INSERT INTO "shop"."orders" ("id", "status", "total") VALUES ($1, $2, $3) ON CONFLICT ("id") DO UPDATE SET "status" = EXCLUDED."status", "total" = EXCLUDED."total" RETURNING *",
}
`;

exports[`compileUpsert > basic upsert structure > should produce INSERT INTO ... VALUES ... ON CONFLICT ... DO UPDATE SET ... RETURNING * 1`] = `"INSERT INTO "shop"."orders" ("id", "status", "total") VALUES ($1, $2, $3) ON CONFLICT ("id") DO UPDATE SET "status" = EXCLUDED."status", "total" = EXCLUDED."total" RETURNING *"`;

exports[`compileUpsert > conflict target (ON CONFLICT columns) > should use composite primary key in conflict target 1`] = `
{
  "params": [
    "o1",
    "p1",
    3,
  ],
  "text": "INSERT INTO "order_items" ("order_id", "product_id", "quantity") VALUES ($1, $2, $3) ON CONFLICT ("order_id", "product_id") DO UPDATE SET "quantity" = EXCLUDED."quantity" RETURNING *",
}
`;

exports[`compileUpsert > conflictColumns option — custom conflict target > conflictColumns with a single unique column produces correct SQL structure 1`] = `
{
  "params": [
    "prod-1",
    "SKU-ABC",
    "Widget",
    9.99,
  ],
  "text": "INSERT INTO "catalog"."products" ("id", "sku", "title", "price") VALUES ($1, $2, $3, $4) ON CONFLICT ("sku") DO UPDATE SET "sku" = EXCLUDED."sku", "title" = EXCLUDED."title", "price" = EXCLUDED."price" RETURNING *",
}
`;

exports[`compileUpsert > conflictColumns option — custom conflict target > resolves PK property keys to their DB column names in the default conflict target 1`] = `
{
  "params": [
    "acc-1",
    "active",
  ],
  "text": "INSERT INTO "auth"."accounts" ("account_id", "status") VALUES ($1, $2) ON CONFLICT ("account_id") DO UPDATE SET "status" = EXCLUDED."status" RETURNING *",
}
`;

exports[`compileUpsert > conflictColumns option — custom conflict target > resolves a composite of multi-word property keys in the conflict target 1`] = `
{
  "params": [
    "m-1",
    "t1",
    "g1",
    "admin",
  ],
  "text": "INSERT INTO "org"."memberships" ("id", "tenant_id", "group_key", "role") VALUES ($1, $2, $3, $4) ON CONFLICT ("tenant_id", "group_key") DO UPDATE SET "tenant_id" = EXCLUDED."tenant_id", "group_key" = EXCLUDED."group_key", "role" = EXCLUDED."role" RETURNING *",
}
`;

exports[`compileUpsert > conflictColumns option — custom conflict target > resolves conflictColumns property keys to their DB column names 1`] = `
{
  "params": [
    "acc-1",
    "user@test.com",
    "User",
  ],
  "text": "INSERT INTO "auth"."accounts" ("account_id", "email_address", "display_name") VALUES ($1, $2, $3) ON CONFLICT ("email_address") DO UPDATE SET "email_address" = EXCLUDED."email_address", "display_name" = EXCLUDED."display_name" RETURNING *",
}
`;

exports[`compileUpsert > conflictColumns option — custom conflict target > should support multiple conflictColumns for a composite unique index 1`] = `
{
  "params": [
    "order-uuid-1",
    "pending",
    99.99,
  ],
  "text": "INSERT INTO "shop"."orders" ("id", "status", "total") VALUES ($1, $2, $3) ON CONFLICT ("status", "total") DO UPDATE SET "status" = EXCLUDED."status", "total" = EXCLUDED."total" RETURNING *",
}
`;

exports[`compileUpsert > conflictColumns option — custom conflict target > should use provided conflictColumns instead of PK columns 1`] = `
{
  "params": [
    "order-uuid-1",
    "pending",
    99.99,
  ],
  "text": "INSERT INTO "shop"."orders" ("id", "status", "total") VALUES ($1, $2, $3) ON CONFLICT ("status") DO UPDATE SET "status" = EXCLUDED."status", "total" = EXCLUDED."total" RETURNING *",
}
`;

exports[`compileUpsert > relation FK columns > should include owning-side FK columns from dehydrateEntity in INSERT and SET clause 1`] = `
{
  "params": [
    "order-uuid-1",
    "pending",
    99.99,
    "cust-uuid-1",
  ],
  "text": "INSERT INTO "shop"."orders" ("id", "status", "total", "customerId") VALUES ($1, $2, $3, $4) ON CONFLICT ("id") DO UPDATE SET "status" = EXCLUDED."status", "total" = EXCLUDED."total", "customerId" = EXCLUDED."customerId" RETURNING *",
}
`;
